# trapper-keeper-mcp

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .license-header  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  config.example.yaml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  pytest.ini  run_tests.py  tox.ini  tsconfig.json  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot.yml  docker.yml  lint.yml  maintenance.yml  release.yml  test.yml  tests.yml
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
docs/: api-reference.md  cli-guide.md  configuration.md  getting-started.md  index.md  installation.md  mcp-tools.md  troubleshooting.md
docs/architecture/: overview.md
docs/development/: contributing.md
docs/tutorials/: advanced-workflows.md  basic-usage.md  custom-categories.md  integration-guide.md
examples/claude-files/: project-context.md
examples/configurations/: full-config.yaml
examples/docker/: docker-compose.yml
examples/scripts/: organize_documentation.py
reports/: swarm-development-centralized-1751850967327.json  swarm-development-centralized-1751851472231.json
scripts/: release.sh  setup-dev.sh
src/: cli.ts  index.ts  server.ts
src/tools/: critical.ts  extract.ts  organize.ts  reference.ts  suggest.ts  validate.ts
src/trapper_keeper/: __init__.py
src/trapper_keeper/cli/: __init__.py  display.py  interactive.py  main.py  prompts.py
src/trapper_keeper/cli/commands/: __init__.py  analyze.py  config.py  extract.py  organize.py  validate.py  watch.py
src/trapper_keeper/core/: __init__.py  base.py  config.py  types.py
src/trapper_keeper/extractor/: __init__.py  category_detector.py  content_extractor.py  reference_generator.py
src/trapper_keeper/mcp/: __init__.py  metrics.py  orchestrator.py  server.py
src/trapper_keeper/mcp/tools/: __init__.py  analyze.py  base.py  extract.py  organize.py  reference.py  validate.py
src/trapper_keeper/monitoring/: __init__.py  file_monitor.py  watcher.py
src/trapper_keeper/organizer/: __init__.py  document_organizer.py
src/trapper_keeper/parser/: __init__.py  markdown_parser.py  parser_factory.py
src/trapper_keeper/utils/: __init__.py  metrics.py
src/types/: index.ts
src/utils/: analyzer.ts  categories.ts  config.ts
tests/: README.md  __init__.py  categories.test.ts  config.test.ts  conftest.py  utils.py
tests/e2e/: test_workflows.py
tests/integration/: test_cli_commands.py  test_mcp_server.py  test_mcp_tools.py
tests/performance/: test_benchmarks.py
tests/unit/: test_category_detector.py  test_content_extractor.py  test_file_monitor.py  test_markdown_parser.py
